Update OpenGLActivity as default start. Update preview ratio to 16:9 Update FPS samples to 30

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,11 +28,11 @@ limitations under the License.
         <activity
             android:name=".CameraXActivity"
             android:label="Camera Core Test App">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-                <category android:name="android.intent.category.DEFAULT"/>
-            </intent-filter>
+            <!--            <intent-filter>-->
+            <!--                <action android:name="android.intent.action.MAIN" />-->
+            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+            <!--                <category android:name="android.intent.category.DEFAULT"/>-->
+            <!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".OpenGLActivity"
